--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 				<configuration>
 
 					<suiteXmlFiles>
-						<suiteXmlFile>src/test/resources/testsuites/testng.xml</suiteXmlFile>
+						<suiteXmlFile>src/test/resources/testsuites/testng_sanity.xml</suiteXmlFile>
 					</suiteXmlFiles>
 					<argLine>
 						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
@@ -55,7 +55,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				
+
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -146,6 +146,19 @@
 			<artifactId>allure-testng</artifactId>
 			<version>2.12.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.6.4</version>
+		</dependency>
 	</dependencies>
+
+
 
 </project>
